# camman

./: .lvimrc  .ycm_extra_conf.py  CMakeLists.txt  README.md  cmakebuild
src/: camdate.cpp  camdate.hpp  camfile.cpp  camfile.hpp  camman.cpp  camman.hpp  camopts.cpp  camopts.hpp  common.hpp  main.cpp
